# LuaCpp2

./: .gitignore  AbstractPointer.h  BasicHostDefs.h  BooleanParam.h  CMakeLists.txt  Closure.h  ConstStructParam.h  Context.h  EngineFunctionImpl.h  EnumParam.h  Fields.h  ForwardParam.h  FuncParam.h  Function.h  HostFunctionImpl.h  InputStack.h  Members.h  NullFunctionImpl.h  NumericParam.h  OutputCopy.h  OutputStack.h  Parameterizable.h  PointerParam.h  README.md  ReadableBoolean.h  ReadableInteger.h  ReadableNumber.h  ReadableParams.h  ReadableString.h  ReadableValue.h  ReadableWString.h  StackItem.h  State.h  StreamWriter.h  StringParam.h  StructParam.h  TableIterator.h  ToString.h  Transfer.h  TransferNumber.h  (+11 more)
docs/: luacpp2_manual.md
example/: CMakeLists.txt
example/scripts/: use_rectangle.lua
example/src/: Geometry.cpp  Geometry.h  Main.cpp
include/: BooleanParam.h  Context.h  EngineFunctionImpl.h  EnumParam.h  Field.h  Fields.h  ForwardParam.h  FunctionImpl.h  HostFunctionImpl.h  Members.h  NullFunctionImpl.h  OutputCopy.h  Param.h  Pointer.h  PointerParam.h  ReadableParams.h  ReadableString.h  Reference.h  ReferenceParam.h  StackItem.h  StringParam.h  StructParam.h  Transfer.h  TransferStack.h  TransferTable.h  UpValue.h  UserData.h  ValueCopy.h  WritableChunk.h  WritableInteger.h  WritableString.h  WritableValue.h  WritableWString.h  luacpp.h
include/LuaCpp2/: AbstractFunction.h  Closure.h  ConstStructParam.h  Context.h  Engine.h  EngineFunctionImpl.h  ForwardParam.h  Function.h  FunctionImpl.h  GlobalVars.h  HostFunctionImpl.h  Library.h  LinkedLibrary.h  Luaux.h  NullFunctionImpl.h  NullRefImpl.h  NumericParam.h  OutputCopy.h  OutputStack.h  ParamList.h  Parameterizable.h  Pointer.h  ReadableBoolean.h  ReadableChunk.h  ReadableInteger.h  ReadableNumber.h  ReadableStackSlot.h  RefImpl.h  Reference.h  SetRefImpl.h  StackItem.h  State.h  StatePointer.h  StreamReader.h  StreamWriter.h  StructParam.h  TableIterator.h  ToString.h  TransferNumber.h  UpValue.h  (+6 more)
include/Luaux/: LuaImport.h  Luaux.h  ModuleNames.h  RegisterModules.h
include/Luaux/Engine/: FileStreamIfce.h  FileStreamImpl.h  IOStreamIfce.h  IOStreamImpl.h  IStreamIfce.h  IStreamImpl.h  OStreamIfce.h  OStreamImpl.h  StreamBaseIfce.h  StreamBaseImpl.h  StringStreamIfce.h  StringStreamImpl.h
include/Luaux/Host/: Input.h  InputStream.h  Output.h  OutputStream.h  SeekableInput.h  SeekableInputStream.h  SeekableOutput.h  SeekableOutputStream.h  SeekableStream.h  Stream.h  StreamBase.h
include/luacpp/: Arguments.h  BasicHostDefs.h  Closure.h  ConstStructParam.h  Engine.h  EngineFunctionImpl.h  FuncParam.h  Function.h  FunctionImpl.h  IgnoreParam.h  NullFunctionImpl.h  ReadableBoolean.h  ReadableChunk.h  ReadableWString.h  Reference.h  StackModifier.h  State.h  StatePointer.h  Table.h  Transfer.h
src/: Arguments.h  BasicHostDefs.h  ConstStructParam.h  Context.h  Engine.h  EngineFunctionImpl.h  Field.h  FuncParam.h  Function.h  FunctionImpl.h  GlobalVars.h  HostFunctionImpl.h  IgnoreParam.h  OutputStack.h  ReadableBoolean.h  ReadableChunk.h  ReadableInteger.h  ReadableNumber.h  ReadableStackSlot.h  Reference.h  ReferenceParam.h  StackSlot.h  State.h  StreamReader.h  StringParam.h  Table.h  TransferBoolean.h  TransferInteger.h  TransferStack.h  TransferString.h  TransferTable.h  TypeToName.h  UserData.h  ValueCopy.h  WritableBoolean.h  WritableChunk.h  WritableInteger.h  WritableNumber.h  WritableParams.h  WritableStackSlot.h  (+3 more)
tests/: BoostTestHelpers.cmake  CMakeLists.txt
tests/src/: LuaLibInst.cpp  Main.cpp  VsTestExplorer.h
tests/src/Engine/: EngineTests.cpp  FunctionCallTests.cpp
tests/src/Luaux/: EngineStreamTests.cpp  HostStreamTests.cpp
tests/src/Parameters/: ArgumentCounter.h  ParameterTests.cpp  WrappedPointerTo.h
tests/src/State/: ChunkTests.cpp  ClosureTests.cpp  CreatingAndCopyingTests.cpp  FunctionTests.cpp  NumberTests.cpp  PointerTests.cpp  ReferenceTests.cpp  StackSlot.cpp  StackSlotTests.cpp  StringTests.cpp  TableTests.cpp  UserDataTests.cpp
tests/src/Transfer/: TransferTests.cpp
tests/src/ValueCopy/: ValueCopyTests.cpp
